cabal-version: 3.0

name: scotty
version: 0.13
synopsis: Haskell web framework inspired by Ruby's Sinatra, using WAI and Warp
homepage: https://github.com/scotty-web/scotty
bug-reports: https://github.com/scotty-web/scotty/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Farmer <xichekolas@gmail.com>
maintainer: Daniel Brice <danielbrice@gmail.com>
copyright: (c) 2012-Present Andrew Farmer
category: Web
stability: experimental
build-type: Simple

description:
    A Haskell web framework inspired by Ruby's Sinatra, using WAI and Warp.
    .
    @
      &#123;-&#35; LANGUAGE OverloadedStrings &#35;-&#125;
      .
      import Web.Scotty
      .
      import Data.Monoid (mconcat)
      .
      main = scotty 3000 $
      &#32;&#32;get &#34;/:word&#34; $ do
      &#32;&#32;&#32;&#32;beam <- param &#34;word&#34;
      &#32;&#32;&#32;&#32;html $ mconcat [&#34;&#60;h1&#62;Scotty, &#34;, beam, &#34; me up!&#60;/h1&#62;&#34;]
    @
    .
    .
    Scotty is the cheap and cheerful way to write RESTful, declarative web applications.
    .
      * A page is as simple as defining the verb, url pattern, and Text content.
    .
      * It is template-language agnostic. Anything that returns a Text value will do.
    .
      * Conforms to WAI Application interface.
    .
      * Uses very fast Warp webserver by default.
    .
    As for the name: Sinatra + Warp = Scotty.
    .
    [WAI] <http://hackage.haskell.org/package/wai>
    .
    [Warp] <http://hackage.haskell.org/package/warp>

tested-with:
      GHC == 9.4.2
    , GHC == 9.2.4
    , GHC == 9.0.2
    , GHC == 8.10.7

extra-source-files:
    README.md
    changelog.md
    examples/404.html
    examples/LICENSE
    examples/*.hs
    examples/static/jquery.js
    examples/static/jquery-json.js
    examples/uploads/.keep

source-repository head
    type:     git
    location: git://github.com/scotty-web/scotty.git

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -fno-warn-orphans

    exposed-modules:
        Web.Scotty
        Web.Scotty.Trans
        Web.Scotty.Internal.Types

    other-modules:
        Web.Scotty.Action
        Web.Scotty.Route
        Web.Scotty.Util

    build-depends:
          base
        , aeson
        , base-compat-batteries
        , blaze-builder
        , bytestring
        , case-insensitive
        , data-default-class
        , exceptions
        , http-types
        , monad-control
        , mtl
        , network
        , regex-compat
        , text
        , transformers
        , transformers-base
        , transformers-compat
        , wai
        , wai-extra
        , warp

test-suite spec
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules: Web.ScottySpec
    default-language: Haskell2010
    ghc-options: -Wall -threaded -fno-warn-orphans

    build-depends:
          base
        , async
        , bytestring
        , data-default-class
        , directory
        , hspec
        , hspec-wai
        , http-types
        , lifted-base
        , network
        , scotty
        , text
        , wai

    build-tool-depends:
        hspec-discover:hspec-discover

benchmark weigh
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -Wall -O2 -threaded

    build-depends:
          base
        , scotty
        , lucid
        , bytestring
        , mtl
        , text
        , transformers
        , data-default-class
        , weigh
