Name:                scotty
Version:             0.30
Synopsis:            Haskell web framework inspired by Ruby's Sinatra, using WAI and Warp
Homepage:            https://github.com/scotty-web/scotty
Bug-reports:         https://github.com/scotty-web/scotty/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Farmer <xichekolas@gmail.com>
Maintainer:          The Scotty maintainers
Copyright:           (c) 2012-Present, Andrew Farmer and the Scotty contributors
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  A Haskell web framework inspired by Ruby's Sinatra, using WAI and Warp.
  .
  @
    &#123;-&#35; LANGUAGE OverloadedStrings &#35;-&#125;
    .
    import Web.Scotty
    .
    main = scotty 3000 $
    &#32;&#32;get &#34;/:word&#34; $ do
    &#32;&#32;&#32;&#32;beam <- pathParam &#34;word&#34;
    &#32;&#32;&#32;&#32;html $ mconcat [&#34;&#60;h1&#62;Scotty, &#34;, beam, &#34; me up!&#60;/h1&#62;&#34;]
  @
  .
  .
  Scotty is the cheap and cheerful way to write RESTful, declarative web applications.
  .
    * A page is as simple as defining the verb, url pattern, and Text content.
  .
    * It is template-language agnostic. Anything that returns a Text value will do.
  .
    * Conforms to WAI Application interface.
  .
    * Uses very fast Warp webserver by default.
  .
  As for the name: Sinatra + Warp = Scotty.
  .
  [WAI] <http://hackage.haskell.org/package/wai>
  .
  [Warp] <http://hackage.haskell.org/package/warp>
tested-with:         GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.3
                   , GHC == 9.12.2
                   , GHC == 9.14.1
Extra-source-files:
    README.md
    changelog.md
    examples/404.html
    examples/LICENSE
    examples/*.hs
    examples/static/jquery.js
    examples/static/jquery-json.js
    examples/uploads/.keep

Library
  Exposed-modules:     Web.Scotty
                       Web.Scotty.Trans
                       Web.Scotty.Trans.Strict
                       Web.Scotty.Internal.Types
                       Web.Scotty.Cookie
                       Web.Scotty.Session
  other-modules:       Web.Scotty.Action
                       Web.Scotty.Body
                       Web.Scotty.Route
                       Web.Scotty.Trans.Lazy
                       Web.Scotty.Util
  default-language:    Haskell2010
  build-depends:       aeson                 >= 2.2.4.1  && < 2.3,
                       base                  >= 4.14     && < 5,
                       blaze-builder         >= 0.4.4.1  && < 0.5,
                       bytestring            >= 0.10.12.0,
                       case-insensitive      >= 1.2.1.0  && < 1.3,
                       containers            >= 0.5      && < 0.9,
                       cookie                >= 0.5.1,
                       exceptions            >= 0.10.4   && < 0.11,
                       http-api-data         >= 0.7,
                       http-types            >= 0.12.4   && < 0.13,
                       monad-control         >= 1.0.3.1  && < 1.1,
                       mtl                   >= 2.2.2    && < 2.4,
                       network               >= 3.2.8.0  && < 3.3,
                       regex-compat          >= 0.95.1   && < 0.96,
                       resourcet,
                       stm,
                       text                  >= 1.2.4.1,
                       time                  >= 1.9.3,
                       transformers          >= 0.5.6.2  && < 0.7,
                       transformers-base     >= 0.4.6.1  && < 0.5,
                       unliftio >= 0.2,
                       unordered-containers  >= 0.2.21   && < 0.3,
                       wai                   >= 3.2.4    && < 3.3,
                       wai-extra             >= 3.1.18,
                       warp                  >= 3.4.13,
                       random                >= 1.3.1

  GHC-options: -Wall -fno-warn-orphans -Wno-unused-imports

test-suite spec
  main-is:             Spec.hs
  other-modules:       Web.ScottySpec
                       Test.Hspec.Wai.Extra
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  build-depends:       async,
                       base,
                       bytestring,
                       directory,
                       hspec == 2.*,
                       hspec-wai >= 0.6.3,
                       http-api-data,
                       http-types,
                       lifted-base,
                       network,
                       scotty,
                       text,
                       time,
                       wai,
                       wai-extra
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  GHC-options:         -Wall -threaded -fno-warn-orphans

test-suite doctest
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  GHC-options:         -Wall -threaded -fno-warn-orphans
  hs-source-dirs:      doctest
  build-depends:       base
                     , bytestring
                     , doctest >= 0.20.1
                     , http-client
                     , http-types
                     , scotty
                     , text
                     , wai

benchmark weigh
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  build-depends:       base,
                       scotty,
                       lucid,
                       bytestring,
                       mtl,
                       resourcet,
                       text,
                       transformers,
                       weigh >= 0.0.16 && <0.1
  GHC-options:         -Wall -O2 -threaded

source-repository head
  type:     git
  location: git://github.com/scotty-web/scotty.git
