Name:                spock
Version:             0.0.1
Synopsis:            Haskell web framework inspired by Ruby's Sinatra, using WAI and Warp
Homepage:            https://github.com/xich/spock
Bug-reports:         https://github.com/xich/spock/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Farmer <anfarmer@ku.edu>
Maintainer:          Andrew Farmer <anfarmer@ku.edu>
Copyright:           (c) 2012 Andrew Farmer
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  A Haskell web framework inspired by Ruby's Sinatra, using WAI and Warp.
  .
  Spock is the logical choice for writing RESTful, declarative web applications.
  .
    * A page is as simple as defining the verb, url pattern, and Text content.
  .
    * It is template-language agnostic. Anything that returns a Text value will do.
  .
    * Conforms to WAI Application interface.
  .
    * Uses very fast Warp webserver by default.
  .
  See example.hs to see Spock in action.
  .
  This design has been done in Haskell at least once before (to my knowledge) by
  the miku framework. My issue with miku is that it uses the Hack2 interface
  instead of WAI (they are analogous, but the latter seems to have more traction),
  and that it is written using a custom prelude called Air (which appears to be an
  attempt to turn Haskell into Ruby syntactically). I wanted something that
  depends on relatively few other packages, with an API that fits on one page.

Extra-source-files:
    README
    example.hs

Library
  Exposed-modules:     Network.Wai.Util, Web.Spock
  default-language:    Haskell2010
  Build-depends:       aeson            >= 0.5,
                       base             >= 4.3.1 && < 5,
                       blaze-builder    >= 0.3,
                       bytestring       >= 0.9.1,
                       case-insensitive >= 0.4,
                       data-default     >= 0.3,
                       http-types       >= 0.6.8,
                       mtl              >= 2.0.1,
                       text             >= 0.11.1,
                       wai              >= 0.4.3,
                       warp             >= 0.4.6

source-repository head
  type:     git
  location: git://github.com/xich/spock.git
