cabal-version: 3.0

name: scotty-examples
version: 0.13
synopsis: scotty examples
homepage: https://github.com/scotty-web/scotty
bug-reports: https://github.com/scotty-web/scotty/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Farmer <xichekolas@gmail.com>
maintainer: Daniel Brice <danielbrice@gmail.com>
copyright: (c) 2012-Present Andrew Farmer
category: Web
stability: experimental
build-type: Simple
description: Example programs using @scotty@

tested-with:
      GHC == 9.4.2
    , GHC == 9.2.4
    , GHC == 9.0.2
    , GHC == 8.10.7

source-repository head
  type: git
  location: https://github.com/scotty-web/scotty
  subdir: examples

common examples-common
    hs-source-dirs: .
    default-language: Haskell2010
    ghc-options: -Wall -threaded
    build-depends:
          base
        , bytestring
        , containers
        , filepath
        , mtl
        , scotty >=0.13 && <0.14
        , stm
        , text
        , transformers

executable scotty-basic
    import: examples-common
    main-is: basic.hs
    build-depends:
          base-compat >=0.11 && <0.13
        , http-types
        , random
        , wai-extra

executable scotty-bodyecho
    import: examples-common
    main-is: bodyecho.hs
    build-depends: blaze-builder

executable scotty-cookies
    import: examples-common
    main-is: cookies.hs

    build-depends:
          blaze-builder
        , blaze-html
        , cookie

executable scotty-exceptions
    import: examples-common
    main-is: exceptions.hs

    build-depends:
          base-compat >=0.11 && <0.13
        , http-types
        , random
        , wai-extra

executable scotty-globalstate
    import: examples-common
    main-is: globalstate.hs

    build-depends:
          base-compat >=0.11 && <0.13
        , data-default-class
        , wai-extra

executable scotty-gzip
    import: examples-common
    main-is: gzip.hs
    build-depends: wai-extra

executable scotty-options
    import: examples-common
    main-is: options.hs

    build-depends:
          data-default-class
        , wai-extra
        , warp

executable scotty-reader
    import: examples-common
    main-is: reader.hs

    build-depends:
          base-compat >=0.11 && <0.13
        , data-default-class

executable scotty-upload
    import: examples-common
    main-is: upload.hs

    build-depends:
          base-compat >=0.11 && <0.13
        , blaze-html
        , wai-extra
        , wai-middleware-static

executable scotty-urlshortener
    import: examples-common
    main-is: urlshortener.hs

    build-depends:
          base-compat >=0.11 && <0.13
        , blaze-html
        , wai-extra
        , wai-middleware-static
