Name:                scotty-examples
Version:             0.1
Synopsis:            scotty examples
Homepage:            https://github.com/scotty-web/scotty
Bug-reports:         https://github.com/scotty-web/scotty/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Farmer <xichekolas@gmail.com>
Maintainer:          Andrew Farmer <xichekolas@gmail.com>
Copyright:           (c) 2012-Present, Andrew Farmer and the Scotty contributors
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:         Example programs using @scotty@
tested-with:         GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.6
                   , GHC == 9.6.2

executable scotty-basic
  main-is:             basic.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       http-types,
                       mtl,
                       random,
                       scotty,
                       text,
                       wai-extra
  GHC-options:         -Wall -threaded

executable scotty-bodyecho
  main-is:             bodyecho.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       blaze-builder,
                       bytestring,
                       scotty,
                       transformers,
                       text
  GHC-options:         -Wall -threaded

executable scotty-cookies
  main-is:             cookies.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       blaze-builder,
                       blaze-html,
                       bytestring,
                       cookie,
                       scotty,
                       text
  GHC-options:         -Wall -threaded

executable scotty-exceptions
  main-is:             exceptions.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       http-types,
                       random,
                       scotty,
                       transformers,
                       unliftio-core,
                       wai-extra
  GHC-options:         -Wall -threaded

executable scotty-globalstate
  main-is:             globalstate.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       mtl,
                       scotty,
                       stm,
                       text,
                       transformers,
                       unliftio-core >= 0.2,
                       wai-extra
  GHC-options:         -Wall -threaded

executable scotty-gzip
  main-is:             gzip.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       scotty,
                       wai-extra
  GHC-options:         -Wall -threaded

executable scotty-json-mode
  main-is:             json_mode.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       aeson,
                       scotty,
                       text
  GHC-options:         -Wall -threaded

executable scotty-middleware
  main-is:             middleware.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       aeson,
                       bytestring,
                       scotty,
                       text,
                       wai-extra
  GHC-options:         -Wall -threaded

executable scotty-options
  main-is:             options.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       scotty,
                       wai-extra,
                       warp
  GHC-options:         -Wall -threaded

executable scotty-reader
  main-is:             reader.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       mtl,
                       scotty,
                       text,
                       unliftio-core >= 0.2
  GHC-options:         -Wall -threaded

executable scotty-upload
  main-is:             upload.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       blaze-html,
                       bytestring,
                       filepath,
                       scotty,
                       text,
                       transformers,
                       wai-extra,
                       wai-middleware-static
  GHC-options:         -Wall -threaded

executable scotty-urlshortener
  main-is:             urlshortener.hs
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base >= 4.6 && < 5,
                       blaze-html,
                       containers,
                       scotty,
                       text,
                       transformers,
                       wai-extra,
                       wai-middleware-static
  GHC-options:         -Wall -threaded

source-repository head
  type:     git
  location: https://github.com/scotty-web/scotty
  subdir:   examples
