Name:                wai-middleware-static
Version:             0.4.0.2
Synopsis:            WAI middleware that intercepts requests to static files.
Homepage:            https://github.com/scotty-web/scotty
Bug-reports:         https://github.com/scotty-web/scotty/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Farmer <afarmer@ittc.ku.edu>
Maintainer:          Andrew Farmer <afarmer@ittc.ku.edu>
Copyright:           (c) 2012-2013 Andrew Farmer
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  WAI middleware that intercepts requests to static files and serves them
  if they exist.
  .
  [WAI] <http://hackage.haskell.org/package/wai>

Library
  Exposed-modules:     Network.Wai.Middleware.Static
  default-language:    Haskell2010
  Build-depends:       base             >= 4.6.0.1  && < 5,
                       bytestring       >= 0.10.0.2 && < 0.11,
                       containers       >= 0.5.0.0  && < 0.6,
                       directory        >= 1.2.0.1  && < 1.3,
                       http-types       >= 0.8.2    && < 0.9,
                       mtl              >= 2.1.2    && < 2.2,
                       filepath         >= 1.3.0.1  && < 1.4,
                       text             >= 0.11.3.1 && < 1.1,
                       wai              >= 2.0.0    && < 2.1

  GHC-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: git://github.com/scotty-web/scotty.git
