Name:                wai-middleware-static
Version:             0.6.0
Synopsis:            WAI middleware that serves requests to static files.
Homepage:            https://github.com/scotty-web/scotty
Bug-reports:         https://github.com/scotty-web/scotty/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Farmer <afarmer@ittc.ku.edu>
Maintainer:          Andrew Farmer <afarmer@ittc.ku.edu>
Copyright:           (c) 2012-2014 Andrew Farmer
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  WAI middleware that intercepts requests to static files and serves them
  if they exist.
  .
  [WAI] <http://hackage.haskell.org/package/wai>

Extra-source-files:    changelog.md

Library
  Exposed-modules:     Network.Wai.Middleware.Static
  default-language:    Haskell2010
  Build-depends:       base             >= 4.6.0.1  && < 5,
                       bytestring       >= 0.10.0.2 && < 0.11,
                       containers       >= 0.5.0.0  && < 0.6,
                       directory        >= 1.2.0.1  && < 1.3,
                       filepath         >= 1.3.0.1  && < 1.4,
                       http-types       >= 0.8.2    && < 0.9,
                       mtl              >= 2.1.2    && < 2.3,
                       text             >= 0.11.3.1 && < 1.2,
                       wai              >= 3.0.0    && < 3.1

  GHC-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: git://github.com/scotty-web/scotty.git
